<resources>
    <string name="app_name">BubbleTracker</string>
    <string name="appTitle">Bubble Tracker</string>
    <string name="scanner">Scanner</string>
    <string name="pCard">Personal Card</string>
    <string name="bCard">Business Card</string>
    <string name="manualEntry">Manual Entry</string>
    <string name="editPersonal">Edit Personal Info</string>
    <string name="editBusiness">Edit Business Info</string>
    <string name="edit_info">Edit Info</string>
    <string name="generate">Generate</string>
    <string name="address_text">Address</string>
    <string name="emailText">Email</string>
    <string name="last_name_text">Last Name</string>
    <string name="first_name_text">First Name</string>
    <string name="scanner_label">Scanner</string>
    <string name="business_card_label">Business Card</string>
    <string name="personal_card_label">Personal Card</string>
    <string name="qr_description">Image view to hold QR code</string>
    <string name="channel_name">bubbleNotificationChannel</string>
    <string name="channel_description">channel to send notification</string>
    <string name="channel_id">scan complete channel</string>
    <string name="direct_connections">Direct Connections</string>
    <string name="personal_email">Personal Email</string>
    <string name="personal_name">Personal Name</string>
    <string name="save">Save</string>
    <string name="edit_user_data">Edit user data</string>
    <string name="business_name">Business Name</string>
    <string name="business_email">Business Email</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="personal_data">Personal Data</string>
    <string name="business_data">Business Data</string>
    <string name="themes">Themes</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="general">General</string>
    <string name="display">Display</string>
    <string name="brightness_level">Brightness Level</string>
</resources>
